VERSION 0.9.7
-------------
Release Date: ?

 - enhanced Peak_Controller_Internal_PkError debug trace output and maded various fixes
 - added in class Peak_View_Header methods codeAsStr(), holdOn(), holdOff(), renamed resetHeader() to reset() and 
   finally added some params to method release() and setRCode()
 - added method header() to Peak_View and modified method render() to support this new method
 - added new class Peak_View_Header to facilitate view http headers
 - added method getTriggerTrace() to Peak_Exception. This method retreive element trace who triggered the exception
 - added methods swapKey(), swapKeyVal(), swapKeyValCallback() to Peak_Model_Zendatable
 - added the notion of param(s) after url to Peak_View_Helper_Assets
 - added method getLang() to class Peak_Lang
 - modified option punc of method _filter_alpha() in class Peak_Filters_Advanced to accept also a string as list of punctuations
 - added param $force_insert to method save() of class Peak_Model_Zendatable
 - updated debugbar.js
 - updated Peak_View_Helper_Debugbar to support new css
 - added a less file for Peak_View_Helper_Debugbar, updated icons, added a dark theme and compressed debugbar css
 - added htmlentities encode in console log of Peak_View_Helper_Debugbar
 - removed deprecated method display() in class Peak_View_Helper_Debug
 - added new view helper Peak_View_Helper_Grid
 - added method _filter_datetime() to class Peak_Filters_Advanced
 - updated vendor twitter bootstrap to 2.3.1

VERSION 0.9.6 
-------------
Release Date: 2013-04-09

 - Peak_View_Helper_Debugbar chrono now use $_SERVER['REQUEST_TIME_FLOAT'] if php >= 5.4
 - modified class Peak_Spl_Dirinfo to support recursive and non-recursive directory iterator
 - added param $return_row to method exists() in class Peak_Model_Zendatable
 - fixed missing default value for param $action of method redirect() in Peak_Controller_Action
 - removed php5.4 array syntax in method process() of class Peak_View_Helper_Assets